// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot - multiline - disabled 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-286 Mui-disabled Mui-disabled makeStyles-disabled-289 MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline makeStyles-multiline-290"
    >
      <textarea
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-292 Mui-disabled Mui-disabled makeStyles-disabled-289 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
        disabled=""
        rows="1"
        style="height: 0px; overflow: hidden;"
      >
        hello
      </textarea>
      <textarea
        aria-hidden="true"
        class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-292 Mui-disabled Mui-disabled makeStyles-disabled-289 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
        readonly=""
        style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 100%;"
        tabindex="-1"
      />
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-339 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-291"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-340"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snapshot - multiline - error state 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
    helptext="Help text"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-343 Mui-error Mui-error makeStyles-error-345 MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline makeStyles-multiline-347"
    >
      <textarea
        aria-invalid="true"
        class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-349 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
        rows="1"
        style="height: 0px; overflow: hidden;"
      >
        hello
      </textarea>
      <textarea
        aria-hidden="true"
        class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-349 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
        readonly=""
        style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 100%;"
        tabindex="-1"
      />
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-396 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-348"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-397"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snapshot - multiline - expanded 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-229 MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline makeStyles-multiline-233"
    >
      <textarea
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-235 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
        rows="4"
      >
        hello
      </textarea>
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-282 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-234"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-283"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snapshot - multiline 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-172 MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline makeStyles-multiline-176"
    >
      <textarea
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-178 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
        rows="1"
        style="height: 0px; overflow: hidden;"
      >
        hello
      </textarea>
      <textarea
        aria-hidden="true"
        class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-178 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
        readonly=""
        style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 100%;"
        tabindex="-1"
      />
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-225 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-177"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-226"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snapshot - select - disabled 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-480 Mui-disabled Mui-disabled makeStyles-disabled-483 MuiInputBase-fullWidth MuiInputBase-formControl"
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby=" "
        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input makeStyles-input-486 Mui-disabled Mui-disabled makeStyles-disabled-483 Mui-disabled"
        role="button"
      >
        Option 1
      </div>
      <input
        type="hidden"
        value="1"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-556 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-485"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-557"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snapshot - select - error state 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-560 Mui-error Mui-error makeStyles-error-562 MuiInputBase-fullWidth MuiInputBase-formControl"
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby=" "
        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input makeStyles-input-566"
        role="button"
        tabindex="0"
      >
        Option 1
      </div>
      <input
        type="hidden"
        value="1"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-636 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-565"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-637"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snapshot - select 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-400 MuiInputBase-fullWidth MuiInputBase-formControl"
    >
      <div
        aria-haspopup="listbox"
        aria-labelledby=" "
        class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input makeStyles-input-406"
        role="button"
        tabindex="0"
      >
        Option 1
      </div>
      <input
        type="hidden"
        value="1"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-476 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-405"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-477"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snapshot - singleline - disabled 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-58 Mui-disabled Mui-disabled makeStyles-disabled-61 MuiInputBase-fullWidth MuiInputBase-formControl"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-64 Mui-disabled Mui-disabled makeStyles-disabled-61"
        disabled=""
        type="text"
        value="hello"
      />
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-111 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-63"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-112"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snapshot - singleline - error 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
    helptext="Help text"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-115 Mui-error Mui-error makeStyles-error-117 MuiInputBase-fullWidth MuiInputBase-formControl"
    >
      <input
        aria-invalid="true"
        class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-121"
        type="text"
        value="hello"
      />
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-168 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-120"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-169"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`snapshot - singleline 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root makeStyles-root-1 MuiInputBase-fullWidth MuiInputBase-formControl"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input makeStyles-input-7"
        type="text"
        value="hello"
      />
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-54 MuiOutlinedInput-notchedOutline makeStyles-notchedOutline-6"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-55"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
